changed name to gettest

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div>
+            gittest:
             <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('login') }}">Login</a>
         </div>
